<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/home_publish_text"
        app:layout_constraintEnd_toEndOf="@id/vSend"
        app:layout_constraintStart_toStartOf="@id/vSend"
        app:layout_constraintTop_toBottomOf="@id/vSend" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/vSend"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_send" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/home_subscribe_text"
        app:layout_constraintEnd_toEndOf="@id/ivReceive"
        app:layout_constraintStart_toStartOf="@id/ivReceive"
        app:layout_constraintTop_toBottomOf="@id/ivReceive" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivReceive"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_receive" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConnect"
        style="@style/CustomButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="80dp"
        android:text="@string/home_connect_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vSend" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/btnConnect"
        app:layout_constraintStart_toStartOf="@id/btnConnect"
        app:layout_constraintTop_toBottomOf="@id/btnConnect" />

</androidx.constraintlayout.widget.ConstraintLayout>